fix vertical align's boxes

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ header{
     font-size: 8px; 
     display: inline-block;
     text-align: center;
+    vertical-align: middle;
 } 
 
 .check{
